--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>She has helped alot in my business, fashion look, my social media posts, ive gone far in them all thanks to her. Thank you so much.</p>
+                <p>John has been instrumental in expanding my business globally through the creation of a stunning website. His expertise has transformed my brand's online presence and enhanced my social media strategy. I've achieved significant growth thanks to his support. Thank you so much, John!</p>
             </div>
 
             <div class="testimonial-item">
@@ -250,7 +250,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <p>I must say Princess is the best of all the people i've met for as a makeup artist and fashion model. I had to make her incharge of my wardrobe and my looks and ever since ive been getting compliments that my dressing is alway up to date. Thank you Princess </p>
+                <p>I have to say, John is the best makeup artist and fashion model I've ever met. I entrusted her with my wardrobe and looks, and since then, I've received countless compliments on my style. Thank you, John! </p>
             </div>
 
             <div class="testimonial-item">
@@ -263,7 +263,7 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <p>Princess is the best i've met so far. Apart from the fact that she dresses so well, she also makes sure that her customer dress no less than her. I've gotten alot of good talk concerning my dressing and my bsiness im working on. She helped as an Entrepreneur and a Fashion enthusiast. Thank you Princess. You're the best </p>
+                <p>John is the best I've encountered! Not only does he have an incredible sense of style, but he also ensures that his clients look just as good. I've received so many compliments on my fashion choices and the business I'm developing. His expertise as both a fashion designer and a web developer has been invaluable. Thank you, John! You're the best!</p>
             </div>
 
             <div class="testimonial-item">
@@ -276,7 +276,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>Princess is the best i've met in all the people ive met for my dress sense. She has the trending fashion sense and the business mind at the same time. Thank you for your help on me so far </p>
+                <p>John is the best I've met when it comes to crafting my sound! He has an incredible knack for trending music styles and a sharp business mind. I'm so grateful for his help in shaping my music. Thank you for everything! </p>
             </div>
         </div>
     </div>
