--- a/index.html
+++ b/index.html
@@ -276,7 +276,33 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>John is the best I've met when it comes to crafting my sound! He has an incredible knack for trending music styles and a sharp business mind. I'm so grateful for his help in shaping my music. Thank you for everything! </p>
+                <p>John is the best I've met when it comes to crafting my sound! He has an incredible knack for trending music styles and a sharp business mind. I'm so grateful for his help in shaping my music. Thank you for everything</p>
+            </div>
+
+            <div class="testimonial-item"></div>
+                <img src="meee.jpg" alt="">
+                <h2>John Ogunnusi</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p>John is hands down the best collaborator I've encountered in my years as a music producer. His ability to craft sound is exceptional, and he has a keen sense for trending music styles paired with a sharp business acumen. I'm truly grateful for his expertise in shaping my projects. Thank you for everything, John!</p>
+            </div>
+
+            <div class="testimonial-item"></div>
+                <img src="meee.jpg" alt="">
+                <h2>John Ogunnusi</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p>John is the best I've worked with for creating my gym's website! His ability to craft a stunning design is incredible, and he has a keen understanding of the latest trends in fitness. I'm so grateful for his help in shaping my online presence. Thank you for everything. </p>
             </div>
         </div>
     </div>
