--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>John has been instrumental in expanding my business globally through the creation of a stunning website. His expertise has transformed my brand's online presence and enhanced my social media strategy. I've achieved significant growth thanks to his support. Thank you so much, John!</p>
+                <p>John has been instrumental in expanding my business globally through the creation of a stunning website. His expertise has transformed my brand's online presence and enhanced my social media strategy. I've achieved significant growth thanks to his support. Thank you so much, John! https://autopride.netlify.app/</p>
             </div>
 
             <div class="testimonial-item">
@@ -263,7 +263,7 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <p>John is the best I've encountered! Not only does he have an incredible sense of style, but he also ensures that his clients look just as good. I've received so many compliments on my fashion choices and the business I'm developing. His expertise as both a fashion designer and a web developer has been invaluable. Thank you, John! You're the best!</p>
+                <p>John is the best I've encountered! Not only does he have an incredible sense of style, but he also ensures that his clients look just as good. I've received so many compliments on my fashion choices and the business I'm developing. His expertise as both a fashion designer and a web developer has been invaluable. Thank you, John! You're the best! https://yuterepublic.netlify.app/</p>
             </div>
 
             <div class="testimonial-item">
@@ -302,7 +302,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>John is the best I've worked with for creating my gym's website! His ability to craft a stunning design is incredible, and he has a keen understanding of the latest trends in fitness. I'm so grateful for his help in shaping my online presence. Thank you for everything. </p>
+                <p>John is the best I've worked with for creating my gym's website! His ability to craft a stunning design is incredible, and he has a keen understanding of the latest trends in fitness. I'm so grateful for his help in shaping my online presence. Thank you for everything. https://coolectivegym.netlify.app/ </p>
             </div>
         </div>
     </div>
