--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>John has been instrumental in expanding my business globally through the creation of a stunning website. His expertise has transformed my brand's online presence and enhanced my social media strategy. I've achieved significant growth thanks to his support. Thank you so much, John! https://autopride.netlify.app/</p>
+                <p>John has been instrumental in expanding my business globally through the creation of a stunning website. His expertise has transformed my brand's online presence and enhanced my social media strategy. I've achieved significant growth thanks to his support. Thank you so much, John! Wanna see <a href="https://autopride.netlify.app/">Click here </a> </p>
             </div>
 
             <div class="testimonial-item">
@@ -263,7 +263,8 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <p>John is the best I've encountered! Not only does he have an incredible sense of style, but he also ensures that his clients look just as good. I've received so many compliments on my fashion choices and the business I'm developing. His expertise as both a fashion designer and a web developer has been invaluable. Thank you, John! You're the best! https://yuterepublic.netlify.app/</p>
+                <p>John is the best I've encountered! Not only does he have an incredible sense of style, but he also ensures that his clients look just as good. I've received so many compliments on my fashion choices and the business I'm developing. His expertise as both a fashion designer and a web developer has been invaluable. Thank you, John! You're the best. Wana see 
+                     <a href="https://yuterepublic.netlify.app/">Click here </a></p>
             </div>
 
             <div class="testimonial-item">
@@ -277,33 +278,48 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
                 <p>John is the best I've met when it comes to crafting my sound! He has an incredible knack for trending music styles and a sharp business mind. I'm so grateful for his help in shaping my music. Thank you for everything</p>
+
+                
+<audio controls>
+    <source src="afro.mp3" type="audio/mpeg">
+    Your browser does not support the audio tag.
+  </audio>
             </div>
 
-            <div class="testimonial-item"></div>
-                <img src="meee.jpg" alt="">
-                <h2>John Ogunnusi</h2>
+            <div class="testimonial-item">
+                <img src="jayk.jpg" alt="">
+                <h2>Tom-lee</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
                 <p>John is hands down the best collaborator I've encountered in my years as a music producer. His ability to craft sound is exceptional, and he has a keen sense for trending music styles paired with a sharp business acumen. I'm truly grateful for his expertise in shaping my projects. Thank you for everything, John!</p>
-            </div>
 
-            <div class="testimonial-item"></div>
-                <img src="meee.jpg" alt="">
-                <h2>John Ogunnusi</h2>
+<audio controls>
+  <source src="file.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+
+            </div>
+            
+
+            <div class="testimonial-item">
+                <img src="kehinde.jpg" alt="">
+                <h2>James Smart</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
-                <p>John is the best I've worked with for creating my gym's website! His ability to craft a stunning design is incredible, and he has a keen understanding of the latest trends in fitness. I'm so grateful for his help in shaping my online presence. Thank you for everything. https://coolectivegym.netlify.app/ </p>
+                <p>John is the best I've worked with for creating my gym's website! His ability to craft a stunning design is incredible, and he has a keen understanding of the latest trends in fitness. I'm so grateful for his help in shaping my online presence. Thank you for everything. Wanna see 
+                     <a href="https://coolectivegym.netlify.app/ ">Click here</a> </p>
             </div>
+
         </div>
     </div>
    </section>
