--- a/index.html
+++ b/index.html
@@ -179,6 +179,36 @@
     </div>
    </section>
 
+
+
+   <section class="projects">
+    <h2>My Projects</h2>
+    <div class="project-grid">
+        <div class="project">
+            <a href="https://autopride.netlify.app/" target="_blank">
+                <img src="car.png" alt="Project 1">
+            </a>
+            <p>AutoPride - Car Showcase</p>
+        </div>
+        <div class="project">
+            <a href="https://coolectivegym.netlify.app/" target="_blank">
+                <img src="gym.png" alt="Project 2">
+            </a>
+            <p>Collective Gym - Fitness Website</p>
+        </div>
+        <div class="project">
+            <a href="https://yuterepublic.netlify.app/" target="_blank">
+                <img src="yute.png" alt="Project 3">
+            </a>
+            <p>Yute Republic - Youth Platform</p>
+        </div>
+    </div>
+</section>
+
+
+
+
+
    <section class="timeline-section" id="education">
     <h2 class="edu-heading">Education</h2>
     <div class="timeline-items">
